--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "three": "^0.173.0"
   },
   "devDependencies": {
+    "@types/three": "^0.173.0",
+    "typescript": "^5.7.3",
     "vite": "^6.1.0"
   }
 }
