--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/jest": "^29.5.14",
     "@types/three": "^0.173.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vite": "^6.1.0"
   }
