--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "resolveJsonModule": true,
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["__mocks__", "src", "__tests__"]
 }
